hw/stock-service/deploy/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: stock
  name: stock-app
  labels:
    app: otus-hw
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: stock-app
  template:
    metadata:
      labels:
        app: stock-app
    spec:
      containers:
        - name: web-service
          image: khmel19/otus:stock
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 6000
              protocol: TCP
            - name: actuator
              containerPort: 8284
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: actuator
            initialDelaySeconds: 150
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: actuator
            initialDelaySeconds: 150
            periodSeconds: 10
