hw/stock-service/deploy/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingres-stock-app
  namespace: stock
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: svc-stock-app
                port:
                  name: http
